multi initiative update